--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 cxf.path=/
 
 #server.port=8080
-#spring.application.name = med-clinic
-#spring.datasource.url=jdbc:postgresql://localhost:5432/clinic-database
-#spring.datasource.username=postgres
-#spring.datasource.password=admin3006
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.show-sql=true
+spring.application.name = med-clinic
+spring.datasource.url=jdbc:postgresql://localhost:5432/clinic-database
+spring.datasource.username=postgres
+spring.datasource.password=admin3006
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
